corpus/tests.txt
================================================================================
Simple variable assignment
================================================================================

var foo = null

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue)))

================================================================================
Simple string assignment
================================================================================

var foo = 'aaa'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral))))

================================================================================
Empty string assignment
================================================================================

var foo = ''

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString)))

================================================================================
String escape sequence
================================================================================

var foo = 'a\'a'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral)
      (escapeSequence)
      (stringLiteral))))

================================================================================
Multiline string assignment
================================================================================

var foo = '''aaa'''

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (multilineString)))

================================================================================
Object assignment
================================================================================

var foo = {
  name: 'hello'
  location: true
}

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (object
      (objectProperty
        (identifier)
        (interpolableString
          (stringLiteral)))
      (objectProperty
        (identifier)
        (literalValue)))))

================================================================================
For loop
================================================================================

resource sa 'Microsoft.Storage/storageAccounts@2019-06-01' = [for storageName in storageAccounts: {
  name: storageName
  location: location
  sku: {
    name: storageSKU
  }
  kind: 'StorageV2'
  properties: {
    supportsHttpsTrafficOnly: true
  }
}]

--------------------------------------------------------------------------------

(program
  (resourceDeclaration
    (identifier)
    (interpolableString
      (stringLiteral))
    (assignment)
    (for
      (identifier)
      (variableAccess
        (identifier))
      (object
        (objectProperty
          (identifier)
          (variableAccess
            (identifier)))
        (objectProperty
          (identifier)
          (variableAccess
            (identifier)))
        (objectProperty
          (identifier)
          (object
            (objectProperty
              (identifier)
              (variableAccess
                (identifier)))))
        (objectProperty
          (identifier)
          (interpolableString
            (stringLiteral)))
        (objectProperty
          (identifier)
          (object
            (objectProperty
              (identifier)
              (literalValue))))))))

================================================================================
Numbers
================================================================================

var myVar = 123
var myVar2 = -454
var mvVar3 = 0

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue))
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue))
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue)))

================================================================================
Booleans
================================================================================

var myVar = false
var myVar2 = true

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue))
  (variableDeclaration
    (identifier)
    (assignment)
    (literalValue)))

================================================================================
Arrays
================================================================================

var myArray = [
  5983
  3923
  -241
]

var myEmptyArray = [
]

var myMixedArray = [
  myVariable
  'hello!'
  true
  1255
]

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (array
      (literalValue)
      (literalValue)
      (literalValue)))
  (variableDeclaration
    (identifier)
    (assignment)
    (array))
  (variableDeclaration
    (identifier)
    (assignment)
    (array
      (variableAccess
        (identifier))
      (interpolableString
        (stringLiteral))
      (literalValue)
      (literalValue))))

================================================================================
Nested resource
================================================================================
resource privateEndpoint 'Microsoft.Network/privateEndpoints@2020-06-01' = {
  resource privateDNSZoneGroup 'privateDnsZoneGroups' = {
    name: 'dnsgroupname'
  }
}

--------------------------------------------------------------------------------

(program
  (resourceDeclaration
    (identifier)
    (interpolableString
      (stringLiteral))
    (assignment)
    (object
      (resourceDeclaration
        (identifier)
        (interpolableString
          (stringLiteral))
        (assignment)
        (object
          (objectProperty
            (identifier)
            (interpolableString
              (stringLiteral))))))))

================================================================================
Function call on property
================================================================================

var a = storageAccountVulnerabilityAssessments.listKeys().foo

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (memberExpression
      (propertyAccess
        (functionCall
          (memberExpression
            (propertyAccess
              (variableAccess
                (identifier))
              (identifier))))
        (identifier)))))

================================================================================
Unicode escape sequence
================================================================================

var surrogate_codepoint = '\u{10437}'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (escapeSequence))))

================================================================================
Multiline string with quote
================================================================================

var foo = '''hello'world'''

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (multilineString)))

================================================================================
String containing dollar
================================================================================

var foo = 'about $3 fiddy'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral))))

================================================================================
String starting with dollar
================================================================================

var foo = '$3 fiddy'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral))))

================================================================================
String ending with dollar
================================================================================

var foo = 'mucho $'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral))))

================================================================================
String in interpolation
================================================================================

var stringInString = 'abc${'def'}'

--------------------------------------------------------------------------------

(program
  (variableDeclaration
    (identifier)
    (assignment)
    (interpolableString
      (stringLiteral)
      (interpolation
        (interpolableString
          (stringLiteral))))))
